packages/zenoh/lib/src/bindings.dart


/// An owned Zenoh querier.
///
/// Sends queries to matching queryables.
final class z_owned_querier_t extends ffi.Struct {
  @ffi.Array.multi([80])
  external ffi.Array<ffi.Uint8> _0;
}

/// An owned Zenoh <a href="https://zenoh.io/docs/manual/abstractions/#queryable"> queryable </a>.
///
/// Responds to queries sent via `z_get()` with intersecting key expression.
final class z_owned_queryable_t extends ffi.Struct {
  @ffi.Array.multi([48])
  external ffi.Array<ffi.Uint8> _0;
}

/// An owned Zenoh <a href="https://zenoh.io/docs/manual/abstractions/#subscriber"> subscriber </a>.
///
/// Receives data from publication on intersecting key expressions.
/// Destroying the subscriber cancels the subscription.
final class z_owned_subscriber_t extends ffi.Struct {
  @ffi.Array.multi([48])
  external ffi.Array<ffi.Uint8> _0;
}

/// A loaned Zenoh encoding.
final class z_loaned_encoding_t extends ffi.Struct {
  @ffi.Array.multi([48])
  external ffi.Array<ffi.Uint8> _0;
}

/// An owned Zenoh fifo query handler.
final class z_owned_fifo_handler_query_t extends ffi.Struct {
  @ffi.Array.multi([8])
  external ffi.Array<ffi.Uint8> _0;
}

/// An owned Zenoh fifo reply handler.
final class z_owned_fifo_handler_reply_t extends ffi.Struct {
  @ffi.Array.multi([8])
  external ffi.Array<ffi.Uint8> _0;
}

/// An owned Zenoh fifo sample handler.
final class z_owned_fifo_handler_sample_t extends ffi.Struct {
  @ffi.Array.multi([8])
  external ffi.Array<ffi.Uint8> _0;
}

/// An loaned Zenoh fifo query handler.
final class z_loaned_fifo_handler_query_t extends ffi.Struct {
  @ffi.Array.multi([8])
  external ffi.Array<ffi.Uint8> _0;
}

/// An owned Zenoh query received by a queryable.
///
/// Queries are atomically reference-counted, letting you extract them from the callback that handed them to you by cloning.
final class z_owned_query_t extends ffi.Struct {
  @ffi.Array.multi([144])
  external ffi.Array<ffi.Uint8> _0;
}

/// An loaned Zenoh fifo reply handler.
final class z_loaned_fifo_handler_reply_t extends ffi.Struct {
  @ffi.Array.multi([8])
  external ffi.Array<ffi.Uint8> _0;
}

/// An owned reply from a Queryable to a `z_get()`.
final class z_owned_reply_t extends ffi.Struct {
  @ffi.Array.multi([248])
  external ffi.Array<ffi.Uint8> _0;
}

/// An loaned Zenoh fifo sample handler.
final class z_loaned_fifo_handler_sample_t extends ffi.Struct {
  @ffi.Array.multi([8])
  external ffi.Array<ffi.Uint8> _0;
}

/// An owned Zenoh sample.
///
/// This is a read only type that can only be constructed by cloning a `z_loaned_sample_t`.
/// Like all owned types, it should be freed using z_drop or z_sample_drop.
final class z_owned_sample_t extends ffi.Struct {
  @ffi.Array.multi([224])
  external ffi.Array<ffi.Uint8> _0;
}

/// An owned Zenoh-allocated hello message returned by a Zenoh entity to a scout message sent with `z_scout()`.
final class z_owned_hello_t extends ffi.Struct {
  @ffi.Array.multi([48])
  external ffi.Array<ffi.Uint8> _0;
}

/// An array of maybe-owned non-null terminated strings.
final class z_owned_string_array_t extends ffi.Struct {
  @ffi.Array.multi([24])
  external ffi.Array<ffi.Uint8> _0;
}

/// @brief A liveliness token that can be used to provide the network with information about connectivity to its
/// declarer: when constructed, a PUT sample will be received by liveliness subscribers on intersecting key
/// expressions.
///
/// A DELETE on the token's key expression will be received by subscribers if the token is destroyed, or if connectivity between the subscriber and the token's creator is lost.
final class z_owned_liveliness_token_t extends ffi.Struct {
  @ffi.Array.multi([16])
  external ffi.Array<ffi.Uint8> _0;
}

/// @brief An owned Zenoh matching listener.
///
/// A listener that sends notifications when the [`MatchingStatus`] of a publisher or querier changes.
/// Dropping the corresponding publisher, also drops matching listener.
final class z_owned_matching_listener_t extends ffi.Struct {
  @ffi.Array.multi([24])
  external ffi.Array<ffi.Uint8> _0;
}

/// @warning This API has been marked as unstable: it works as advertised, but it may be changed in a future release.
/// @brief An owned MemoryLayout.
final class z_owned_memory_layout_t extends ffi.Struct {
  @ffi.Array.multi([16])
  external ffi.Array<ffi.Uint8> _0;
}

/// An owned mutex.
final class z_owned_mutex_t extends ffi.Struct {
  @ffi.Array.multi([24])
  external ffi.Array<ffi.Uint8> _0;
}

/// A Zenoh reply error - a combination of reply error payload and its encoding.
final class z_owned_reply_err_t extends ffi.Struct {
  @ffi.Array.multi([88])
  external ffi.Array<ffi.Uint8> _0;
}

/// An owned Zenoh ring query handler.
final class z_owned_ring_handler_query_t extends ffi.Struct {
  @ffi.Array.multi([8])
  external ffi.Array<ffi.Uint8> _0;
}

/// An owned Zenoh ring reply handler.
final class z_owned_ring_handler_reply_t extends ffi.Struct {
  @ffi.Array.multi([8])
  external ffi.Array<ffi.Uint8> _0;
}

/// An owned Zenoh ring sample handler.
final class z_owned_ring_handler_sample_t extends ffi.Struct {
  @ffi.Array.multi([8])
  external ffi.Array<ffi.Uint8> _0;
}

/// An owned Zenoh session.
final class z_owned_session_t extends ffi.Struct {
  @ffi.Array.multi([8])
  external ffi.Array<ffi.Uint8> _0;
}

/// @warning This API has been marked as unstable: it works as advertised, but it may be changed in a future release.
/// @brief An owned shared ShmProvider.
final class z_owned_shared_shm_provider_t extends ffi.Struct {
  @ffi.Array.multi([104])
  external ffi.Array<ffi.Uint8> _0;
}

/// @warning This API has been marked as unstable: it works as advertised, but it may be changed in a future release.
/// @brief An owned SHM Client.
final class z_owned_shm_client_t extends ffi.Struct {
  @ffi.Array.multi([16])
  external ffi.Array<ffi.Uint8> _0;
}

/// @warning This API has been marked as unstable: it works as advertised, but it may be changed in a future release.
/// @brief An owned SHM Client Storage
final class z_owned_shm_client_storage_t extends ffi.Struct {
  @ffi.Array.multi([8])
  external ffi.Array<ffi.Uint8> _0;
}

/// @warning This API has been marked as unstable: it works as advertised, but it may be changed in a future release.
/// @brief An owned ShmProvider.
final class z_owned_shm_provider_t extends ffi.Struct {
  @ffi.Array.multi([104])
  external ffi.Array<ffi.Uint8> _0;
}

/// An owned Zenoh task.
final class z_owned_task_t extends ffi.Struct {
  @ffi.Array.multi([24])
  external ffi.Array<ffi.Uint8> _0;
}

/// The view over a string.
final class z_view_string_t extends ffi.Struct {
  @ffi.Array.multi([32])
  external ffi.Array<ffi.Uint8> _0;
}

final class z_loaned_liveliness_token_t extends ffi.Struct {
  @ffi.Array.multi([16])
  external ffi.Array<ffi.Uint8> _0;
}

/// @warning This API has been marked as unstable: it works as advertised, but it may be changed in a future release.
/// @brief A loaned MemoryLayout.
final class z_loaned_memory_layout_t extends ffi.Struct {
  @ffi.Array.multi([16])
  external ffi.Array<ffi.Uint8> _0;
}

/// A loaned SHM Client Storage.
final class z_loaned_shm_client_storage_t extends ffi.Struct {
  @ffi.Array.multi([8])
  external ffi.Array<ffi.Uint8> _0;
}

/// @warning This API has been marked as unstable: it works as advertised, but it may be changed in a future release.
/// @brief A loaned pointer in SHM Segment.
final class z_loaned_ptr_in_segment_t extends ffi.Struct {
  @ffi.Array.multi([24])
  external ffi.Array<ffi.Uint8> _0;
}

/// A loaned Zenoh publisher.
final class z_loaned_publisher_t extends ffi.Struct {
  @ffi.Array.multi([112])
  external ffi.Array<ffi.Uint8> _0;
}

/// A loaned Zenoh queryable.
final class z_loaned_querier_t extends ffi.Struct {
  @ffi.Array.multi([80])
  external ffi.Array<ffi.Uint8> _0;
}

/// A loaned Zenoh queryable.
final class z_loaned_queryable_t extends ffi.Struct {
  @ffi.Array.multi([48])
  external ffi.Array<ffi.Uint8> _0;
}

/// A loaned Zenoh reply error.
final class z_loaned_reply_err_t extends ffi.Struct {
  @ffi.Array.multi([88])
  external ffi.Array<ffi.Uint8> _0;
}

/// An loaned Zenoh ring query handler.
final class z_loaned_ring_handler_query_t extends ffi.Struct {
  @ffi.Array.multi([8])
  external ffi.Array<ffi.Uint8> _0;
}

/// An loaned Zenoh ring reply handler.
final class z_loaned_ring_handler_reply_t extends ffi.Struct {
  @ffi.Array.multi([8])
  external ffi.Array<ffi.Uint8> _0;
}

/// An loaned Zenoh ring sample handler.
final class z_loaned_ring_handler_sample_t extends ffi.Struct {
  @ffi.Array.multi([8])
  external ffi.Array<ffi.Uint8> _0;
}

/// @warning This API has been marked as unstable: it works as advertised, but it may be changed in a future release.
/// @brief A loaned shared ShmProvider.
final class z_loaned_shared_shm_provider_t extends ffi.Struct {
  @ffi.Array.multi([104])
  external ffi.Array<ffi.Uint8> _0;
}

/// @warning This API has been marked as unstable: it works as advertised, but it may be changed in a future release.
/// @brief A loaned ZShmMut slice.
final class z_loaned_shm_mut_t extends ffi.Struct {
  @ffi.Array.multi([80])
  external ffi.Array<ffi.Uint8> _0;
}

/// A loaned string array.
final class z_loaned_string_array_t extends ffi.Struct {
  @ffi.Array.multi([24])
  external ffi.Array<ffi.Uint8> _0;
}

/// A loaned Zenoh subscriber.
final class z_loaned_subscriber_t extends ffi.Struct {
  @ffi.Array.multi([48])
  external ffi.Array<ffi.Uint8> _0;
}

/// A user allocated string, viewed as a key expression.
final class z_view_keyexpr_t extends ffi.Struct {
  @ffi.Array.multi([32])
  external ffi.Array<ffi.Uint8> _0;
}

final class z_moved_precomputed_layout_t extends ffi.Struct {
  external z_owned_precomputed_layout_t _this;
}

final class z_moved_bytes_t extends ffi.Struct {
  external z_owned_bytes_t _this;
}

final class z_moved_shm_t extends ffi.Struct {
  external z_owned_shm_t _this;
}

final class z_moved_shm_mut_t extends ffi.Struct {
  external z_owned_shm_mut_t _this;
}

final class z_moved_slice_t extends ffi.Struct {
  external z_owned_slice_t _this;
}

final class z_moved_string_t extends ffi.Struct {
  external z_owned_string_t _this;
}

final class z_moved_bytes_writer_t extends ffi.Struct {
  external z_owned_bytes_writer_t _this;
}

final class z_moved_cancellation_token_t extends ffi.Struct {
  external z_owned_cancellation_token_t _this;
}

final class z_moved_chunk_alloc_result_t extends ffi.Struct {
  external z_owned_chunk_alloc_result_t _this;
}

final class z_moved_ptr_in_segment_t extends ffi.Struct {
  external z_owned_ptr_in_segment_t _this;
}

/// @brief A hello message-processing closure.
///
/// A closure is a structure that contains all the elements for stateful, memory-leak-free callbacks.
final class z_owned_closure_hello_t extends ffi.Struct {
  external ffi.Pointer<ffi.Void> _context;

  external ffi.Pointer<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<z_loaned_hello_t> hello,
        ffi.Pointer<ffi.Void> context,
      )
    >
  >
  _call;

  external ffi.Pointer<
    ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void> context)>
  >
  _drop;
}

/// Moved closure.
final class z_moved_closure_hello_t extends ffi.Struct {
  external z_owned_closure_hello_t _this;
}

/// @brief A struct that indicates if there exist Subscribers matching the Publisher's key expression or Queryables matching Querier's key expression and target.
final class z_matching_status_t extends ffi.Struct {
  /// True if there exist matching Zenoh entities, false otherwise.
  @ffi.Bool()
  external bool matching;
}

/// @warning This API has been marked as unstable: it works as advertised, but it may be changed in a future release.
/// @brief A matching status-processing closure.
///
/// A closure is a structure that contains all the elements for stateful, memory-leak-free callbacks.
final class z_owned_closure_matching_status_t extends ffi.Struct {
  external ffi.Pointer<ffi.Void> _context;
